Modified neural model and learners to allow custom seed for randomness due to testing needs. Introduced EMMA library for coverage generation.
git-svn-id: svn://svn.code.sf.net/p/mulan/code/trunk@501 90ebec12-01d7-49c3-8feb-d42dc2bd4ece